--- a/src/components/sections/Technologies/Technologies.module.css
+++ b/src/components/sections/Technologies/Technologies.module.css
@@ -122,13 +122,14 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  transform: translate(-50%, -50%);
+  margin-left: -21px;
+  margin-top: -21px;
   z-index: 1;
   transition: transform 0.2s ease;
 }
 
 .orbitIcon:hover {
-  transform: translate(-50%, -50%) scale(1.2);
+  transform: scale(1.2);
 }
 
 .orbitSvg {
@@ -235,6 +236,8 @@
   .orbitIcon {
     width: 36px;
     height: 36px;
+    margin-left: -18px;
+    margin-top: -18px;
   }
 }
 
@@ -256,6 +259,8 @@
   .orbitIcon {
     width: 30px;
     height: 30px;
+    margin-left: -15px;
+    margin-top: -15px;
   }
 
   .categories {
@@ -278,5 +283,7 @@
   .orbitIcon {
     width: 26px;
     height: 26px;
+    margin-left: -13px;
+    margin-top: -13px;
   }
 }
